# adaptivecardbuilder

./: README.md  pyproject.toml  send_to_teams_test.py
adaptivecardbuilder/: builder.py
adaptivecardbuilder/adaptivecardbuilder/: __init__.py
