[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptivecardbuilder"
version = "0.1.0"
description = "A helper for building and sending Adaptive Cards to Microsoft Teams"
authors = [
    { name = "Harry Lokeren", email = "harry.vyvey@lokeren.be" }
]
dependencies = [
    "requests"
]
readme = "README.md"
license = { text = "Stad Lokeren" }

[tool.setuptools]
py-modules = ["adaptive_card_builder"]

[project.urls]
Homepage = "https://github.com/HarryLokeren/adaptivecardbuilder"
