[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptivecardbuilder"
version = "0.1.5"
description = "A helper for building and sending Adaptive Cards to Microsoft Teams"
authors = [
    { name = "Harry Lokeren", email = "harry.vyvey@lokeren.be" }
]
dependencies = [
    "requests",
    "datetime"
]
readme = "README.md"
license = { text = "Stad Lokeren" }

[project.urls]
Homepage = "https://github.com/HarryLokeren/adaptivecardbuilder"
